Regenerate all 215 modules with embedding-based RAG and new models
- Switch to nomic-embed-text-v1.5 for semantic chunk retrieval
- Draft model: llama-3.3-70b-instruct, refine model: nemotron-3-super-120b-a12b
- Retrieve 12 primary + 6 secondary chunks per module via cosine similarity
- Increase max_tokens: 4000 (draft), 6000 (refine)
- New section order: Core Concepts, How It Works, Worked Examples,
  Common Mistakes, Exercises, Linux Connection, Why This Matters
- Add retrieve.py with embedding search and keyword fallback